2004-11-14  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	(IPPROTO_IP): New constant.
	(PF_UNSPEC): Idem.
	(PF_INET): Idem.
	(PF_INET6): Idem.

2004-11-14  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	Generate size of types explicitly.
	Fix comment near Win32 linking pragma.

2004-11-01  Pascal Obry  <pascal@obry.org>

	* aws-net-std__gnat.adb:
	Minor reformatting.

2004-10-29  Pascal Obry  <pascal@obry.org>

	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
	(Send): Call Net.Log.Write if socket log activated.
	(Receive): Call Net.Log.Write if socket log activated.

2004-10-25  Pascal Obry  <pascal@obry.org>

	* aws-net-std__adasockets.adb:
	(Connect): Minor code fix to be able to compile it.

2004-10-16  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__gnat.adb, aws-net-std__adasockets.adb:
	(Connect): Do not wait for connection in case of Wait parameter false.

2004-10-08  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__gnat.adb:
	Remove CR at end of lines.

2004-09-29  Pascal Obry  <pascal@obry.org>

	* src/check_config.c:
	Rename -laws-win32 to -laws_win32. Projects files does not support
	 libraries with minus so we now use the "aws_" prefix for all AWS
	 libraries for consistency.

	* makefile:
	Extensive changes to support build based on GNAT Project files.
	The makefile based build has been removed.

2004-09-23  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	Minor reformat.

	* aws-net-std__gnat.adb:
	(Bind): FreeAddrInfo just after C_Bind.
	(Raise_Socket_Error): Add pragma Inline for To_String routines.
	 Do not use intermediate constant SEM. Turn warnings on when possible.

2004-09-23  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	(SO_ERROR): Add constant not defined in AdaSockets.
	(ETIMEDOUT): Idem.
	Add include errno.h for not Win32 platforms.

	* aws-net-std__adasockets.adb:
	(Get_Addr_Info): Use GAI_StrError in error handling.
	(Errno): New routine.